ログに金額が正しく記録されない問題の修正 コマンド補完の実装